# Bloom

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Cargo.toml  README.md  index.html  vcpkg.json
data/shaders/openGL/: default.frag.glsl  default.vert.glsl
src/: CMakeLists.txt  bloomApp.cpp  bloomApp.h  main.cpp  main.rs  openGlApp.cpp  openGlApp.h  openGlApp.hpp  validationHelper.cpp  validationHelper.h
src/engine/: app.rs  mod.rs  renderer.rs
src/engine/shaders/: default.wgsl
src/filesystem/: fileReader.cpp  fileReader.h
src/openGL/: material.h  renderer.cpp  renderer.h  renderer.hpp  shader.cpp  shader.h  shader.hpp  texture.cpp  texture.h  texture.hpp
src/openGL/material/: bufferInput.h  material.h  shader.cpp  shader.h  shaderInputFormat.h  textureInput.h  uniformInput.h
src/openGL/model/: cube.h  mesh.cpp  mesh.hpp  model.h  model.hpp  modelImporter.cpp  modelImporter.hpp  vertex.h  vertex.hpp
src/rendering/: backends.hpp
src/ui/: UiRenderer.cpp  uiRenderer.hpp  uiRendererFactory.cpp  uiRendererFactory.hpp
src/ui/backends/: inputBackend.hpp  platformBackend.hpp  renderingBackend.hpp
src/ui/backends/impl/: openGlRenderingBackend.cpp  openGlRenderingBackend.hpp  sdl2OpenGLInputBackend.cpp  sdl2OpenGLInputBackend.hpp
src/window/: backends.hpp  openGlWindow.cpp  openGlWindow.h  openGlWindow.hpp  window.h  window.hpp  windowSize.h
src/window/impl/: openGlWindow.cpp  openGlWindow.hpp  sdl2OpenGLWindow.cpp  sdl2OpenGLWindow.hpp
